--- a/package.json
+++ b/package.json
@@ -17,20 +17,32 @@
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "apexcharts": "^3.27.1",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^2.9.3",
     "choices.js": "^9.0.1",
+    "classnames": "^2.2.6",
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.5",
     "dragula": "^3.7.2",
+    "express": "^4.17.2",
     "feather-icons": "^4.28.0",
+    "jsonwebtoken": "^8.5.1",
     "laravel-mix": "^6.0.25",
+    "lodash": "^4.17.21",
+    "lodash.get": "^4.4.2",
+    "mongoose": "^6.1.2",
+    "nodemon": "^2.0.15",
     "nunjucks": "^3.2.3",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "perfect-scrollbar": "^1.5.1",
     "popper.js": "^1.16.1",
     "quill": "^1.3.7",
     "rater-js": "^1.0.1",
     "rtlcss": "^3.2.1",
     "simple-datatables": "^2.1.13",
+    "socket.io-client": "^2.4.0",
     "sweetalert2": "^11.0.0",
     "toastify-js": "^1.11.0",
     "toastr": "^2.1.4"
