--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
   "author": "mike-a-b",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@popperjs/core": "^2.9.2",
     "apexcharts": "^3.27.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^2.9.3",
     "choices.js": "^9.0.1",
     "classnames": "^2.2.6",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.5",
     "dragula": "^3.7.2",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "feather-icons": "^4.28.0",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
@@ -32,6 +36,7 @@
     "lodash": "^4.17.21",
     "lodash.get": "^4.4.2",
     "mongoose": "^6.1.2",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "nunjucks": "^3.2.3",
     "passport": "^0.5.2",
