--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "mike-a-b",
   "version": "1.2.0",
   "description": "mike-a-b",
-  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mike-a-b/alexproject.git"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
     "start": "node bin/WWW.js",
     "development": "mix",
